--- a/Index.html
+++ b/Index.html
@@ -95,9 +95,7 @@
                 </div>
             </div>
 
-<!--
-
-                <div class="item-bottom">
+                <div class="content_2">
                     <div class="item item-2">
                         <span class="color-line cline_2"></span>
                         <p class="asl">ABOUT SUPER LOGO</p>
@@ -113,17 +111,22 @@
                     <div class="item item-2">
                         <span class="color-line cline_2"></span>
                         <p class="asl">RESENT POSTS</p>
+                        <div class="wraper-article">
                         <div class="items-text">
+                            <img src="./img/car.jpg" alt="" class="little_photo">
+                            <h4 class="lorem">LOREM IPSUM</h2>
+                            <p class="item-text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
+                            </div>
+                        <div class="items-text">
+                            <img src="./img/phone.jpg" alt="" class="little_photo">
                             <h4 class="">LOREM IPSUM</h2>
                             <p class="item-text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                             </div>
                         <div class="items-text">
+                            <img src="./img/BBC.jpg" alt="" class="little_photo">
                             <h4 class="">LOREM IPSUM</h2>
                             <p class="item-text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
-                            </div>
-                        <div class="items-text">
-                            <h4 class="">LOREM IPSUM</h2>
-                            <p class="item-text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
+                        </div>
                         </div>
                     </div>
                     <div class="item item-2">
@@ -138,7 +141,8 @@
                             consectetur diam id faucibus sagittis. Praesent placerat,
                             diam non sollicitudin suscipit, eros erat</p>
                     </div>
-
+                    </div>
+<!--
                     <div class="clients-bottom">
                         <div class="clients-header">
                             <span class="color-line cline_3"></span>
