--- a/Index.html
+++ b/Index.html
@@ -119,12 +119,12 @@
                             </div>
                         <div class="items-text">
                             <img src="./img/phone.jpg" alt="" class="little_photo">
-                            <h4 class="">LOREM IPSUM</h2>
+                            <h4 class="lorem">LOREM IPSUM</h2>
                             <p class="item-text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                             </div>
                         <div class="items-text">
                             <img src="./img/BBC.jpg" alt="" class="little_photo">
-                            <h4 class="">LOREM IPSUM</h2>
+                            <h4 class="lorem">LOREM IPSUM</h2>
                             <p class="item-text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                         </div>
                         </div>
