--- a/Index.html
+++ b/Index.html
@@ -61,6 +61,7 @@
                         dignissim, tincidunt arcu eget, posuere tellus. Quisque
                         consectetur diam id faucibus sagittis. Praesent placerat,
                         diam non sollicitudin suscipit, eros erat</p>
+                        <a href="" class="read_more">Read more...</a>
                 </div>
                 <div class="item first_line">
                     <span class="color-line line-2"></span>
@@ -70,6 +71,7 @@
                     Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
                     fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
                     Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
+                    <a href="" class="read_more">Steve Jobs, CEO</a>
                 </div>
                 </div>
                 
@@ -82,6 +84,7 @@
                     Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
                     fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
                     Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
+                    <a href="" class="read_more">Read more...</a>
                 </div>
                 <div class="item first_line">
                     <span class="color-line"></span>
@@ -91,6 +94,7 @@
                     Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
                     fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
                     Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
+                    <a href="" class="read_more">Steve Jobs, CEO</a>
                 </div>
                 </div>
             </div>
@@ -107,6 +111,7 @@
                             dignissim, tincidunt arcu eget, posuere tellus. Quisque
                             consectetur diam id faucibus sagittis. Praesent placerat,
                             diam non sollicitudin suscipit, eros erat</p>
+                            <a href="" class="read_more r_m2">Read more...</a>
                     </div>
                     <div class="item item-2">
                         <span class="color-line cline_2"></span>
@@ -140,6 +145,7 @@
                             dignissim, tincidunt arcu eget, posuere tellus. Quisque
                             consectetur diam id faucibus sagittis. Praesent placerat,
                             diam non sollicitudin suscipit, eros erat</p>
+                            <a href="" class="read_more r_m2">Read more...</a>
                     </div>
                     </div>
 
