--- a/Index.html
+++ b/Index.html
@@ -21,14 +21,14 @@
 
                 <nav class="menu-bar">
                     <ul class="menu">
-                        <li class="menu__item menu__item-home"><a href="#" class="menu__link menu__link-active">HOME</a></li>
+                        <li class="menu__item menu__item_active"><a href="#" class="menu__link menu__link_active">HOME</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">ABOUT US</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">SERVICE</a></li>
-                        <li class="menu__item partners"><a href="#" class="menu__link">PARTNERS</a></li>
-                        <li class="menu__item customers"><a href="#" class="menu__link">CUSTOMERS</a></li>
-                        <li class="menu__item project"><a href="#" class="menu__link">PROJECT</a></li>
-                        <li class="menu__item careers"><a href="#" class="menu__link">CAREERS</a></li>
-                        <li class="menu__item contact"><a href="#" class="menu__link">CONTACT</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">PARTNERS</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">CUSTOMERS</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">PROJECT</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">CAREERS</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">CONTACT</a></li>
                     </ul>
                 </nav>
             </header>
