--- a/Index.html
+++ b/Index.html
@@ -40,12 +40,12 @@
             <li class="frame__btn"><a href="#" class="frame__btn-link">READ MORE</a></li>
         </div>
         <div class="main-content">
-        <div class="content">
-            <div class="content-item">
-                <div class="item__line"></div>
-                <p class="item__article">ABOUT SUPER LOGO</p>
-                <img src="./img/puppy.jpg" alt="puppy" class="item__img">
-                <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <div class="content">
+                <div class="content-item">
+                    <div class="item__line"></div>
+                    <p class="item__article">ABOUT SUPER LOGO</p>
+                    <img src="./img/puppy.jpg" alt="puppy" class="item__img">
+                    <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Sed quam massa, dignissim at nisi nec, iaculis molestie
                     leo. Aenean hendrerit pretium enim quis rutrum.
                     Pellentesque mattis sem a efficitur auctor. Sed
@@ -54,30 +54,29 @@
                     consectetur diam id faucibus sagittis. Praesent placerat,
                     diam non sollicitudin suscipit, eros erat</p>
                     <a href="" class="item__link">Read more...</a>
-            </div>
-            <div class="content-item second-item">
-                <span class="item__line line-2"></span>
-                <p class="item__article">SOME WORDS OUR CEO</p>
-                <img src="./img/jobs.jpg" alt="Jobs" class="item__img">
-                <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
+                </div>
+                <div class="content-item second-item">
+                    <span class="item__line line-2"></span>
+                    <p class="item__article">SOME WORDS OUR CEO</p>
+                    <img src="./img/jobs.jpg" alt="Jobs" class="item__img">
+                    <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
                     Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
                     fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
                     Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
-                <a href="" class="item__link">Steve Jobs, CEO</a>
-            </div>
-        </div>
-                
-        <div class="content">
-            <div class="content-item">
-                <span class="item__line line-2"></span>
-                <p class="item__article">ABOUT SUPER LOGO</p>
-                <img src="./img/loopoglaz.jpg" alt="loopoglaz" class="item__img">
-                <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
+                    <a href="#" class="item__link">Steve Jobs, CEO</a>
+                </div>
+            </div>       
+            <div class="content">
+                <div class="content-item">
+                    <span class="item__line line-2"></span>
+                    <p class="item__article">ABOUT SUPER LOGO</p>
+                    <img src="./img/loopoglaz.jpg" alt="loopoglaz" class="item__img">
+                    <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
                     Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
                     fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
                     Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
-                    <a href="" class="item__link">Read more...</a>
-            </div>
+                    <a href="#" class="item__link">Read more...</a>
+                </div>
                 <div class="content-item second-item">
                     <span class="item__line"></span>
                     <p class="item__article">SOME WORDS OUR CEO</p>
@@ -86,76 +85,73 @@
                     Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
                     fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
                     Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
-                    <a href="" class="item__link">Steve Jobs, CEO</a>
+                    <a href="#" class="item__link">Steve Jobs, CEO</a>
                 </div>
             </div>
         </div>
-
-            <div class="content-2">
-                <div class="content-item content-item-2">
-                    <span class="item__line cline_2"></span>
-                    <p class="item__article">ABOUT SUPER LOGO</p>
-                    <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Sed quam massa, dignissim at nisi nec, iaculis molestie
-                    leo. Aenean hendrerit pretium enim quis rutrum.
-                    Pellentesque mattis sem a efficitur auctor. Sed
-                    vulputate vitae dui non fermentum. Donec non sem
-                    dignissim, tincidunt arcu eget, posuere tellus. Quisque
-                    consectetur diam id faucibus sagittis. Praesent placerat,
-                    diam non sollicitudin suscipit, eros erat</p>
-                    <a href="" class="item__link r_m2">Read more...</a>
-                </div>
-                <div class="content-item content-item-2">
-                    <span class="item__line cline_2"></span>
-                    <p class="item__article">RESENT POSTS</p>
-                    <div class="wraper-article">
-                        <div class="little-item">
-                            <img src="./img/car.jpg" alt="car" class="little_photo">
-                            <h4 class="lorem">LOREM IPSUM</h2>
-                            <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
-                        </div>
-                        <div class="little-item">
-                            <img src="./img/phone.jpg" alt="phone" class="little_photo">
-                            <h4 class="lorem">LOREM IPSUM</h2>
-                            <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
-                        </div>
-                        <div class="little-item">
-                            <img src="./img/BBC.jpg" alt="BBC-logo" class="little_photo">
-                            <h4 class="lorem">LOREM IPSUM</h2>
-                            <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
-                        </div>
+        <div class="content-2">
+            <div class="content-item content-item-2">
+                <span class="item__line cline_2"></span>
+                <p class="item__article">ABOUT SUPER LOGO</p>
+                <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Sed quam massa, dignissim at nisi nec, iaculis molestie
+                leo. Aenean hendrerit pretium enim quis rutrum.
+                Pellentesque mattis sem a efficitur auctor. Sed
+                vulputate vitae dui non fermentum. Donec non sem
+                dignissim, tincidunt arcu eget, posuere tellus. Quisque
+                consectetur diam id faucibus sagittis. Praesent placerat,
+                diam non sollicitudin suscipit, eros erat</p>
+                <a href="" class="item__link r_m2">Read more...</a>
+            </div>
+            <div class="content-item content-item-2">
+                <span class="item__line cline_2"></span>
+                <p class="item__article">RESENT POSTS</p>
+                <div class="wraper-article">
+                    <div class="little-item">
+                        <img src="./img/car.jpg" alt="car" class="little_photo">
+                        <h4 class="lorem">LOREM IPSUM</h2>
+                        <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                     </div>
-                </div>
-                <div class="content-item content-item-2">
-                    <span class="item__line cline_2"></span>
-                    <p class="item__article">ABOUT SUPER LOGO</p>
-                    <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Sed quam massa, dignissim at nisi nec, iaculis molestie
-                        leo. Aenean hendrerit pretium enim quis rutrum.
-                        Pellentesque mattis sem a efficitur auctor. Sed
-                        vulputate vitae dui non fermentum. Donec non sem
-                        dignissim, tincidunt arcu eget, posuere tellus. Quisque
-                        consectetur diam id faucibus sagittis. Praesent placerat,
-                        diam non sollicitudin suscipit, eros erat</p>
-                        <a href="" class="item__link r_m2">Read more...</a>
+                    <div class="little-item">
+                        <img src="./img/phone.jpg" alt="phone" class="little_photo">
+                        <h4 class="lorem">LOREM IPSUM</h2>
+                        <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
+                    </div>
+                    <div class="little-item">
+                        <img src="./img/BBC.jpg" alt="BBC-logo" class="little_photo">
+                        <h4 class="lorem">LOREM IPSUM</h2>
+                        <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
+                    </div>
                 </div>
             </div>
-
-                    <div class="clients">
-                        <div class="clients-header">
-                            <span class="item__line cline_3"></span>
-                            <p class="item__article">CLIENTS</p>
-                        </div>
-                        <div class="clients-logo">
-                            <img src="./img/logo-html.jpg" alt="html logo" class="clients-logo__img">
-                            <img src="./img/logo-css.jpg" alt="css logo" class="clients-logo__img">
-                            <img src="./img/logo-nodejs.jpg" alt="nodejs logo" class="clients-logo__img">
-                            <img src="./img/logo-php.jpg" alt="php logo" class="clients-logo__img">
-                            <img src="./img/logo-mysql.jpg" alt="MySQL logo" class="clients-logo__img">
-                        </div>
-                    </div>
+            <div class="content-item content-item-2">
+                <span class="item__line cline_2"></span>
+                <p class="item__article">ABOUT SUPER LOGO</p>
+                <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Sed quam massa, dignissim at nisi nec, iaculis molestie
+                leo. Aenean hendrerit pretium enim quis rutrum.
+                Pellentesque mattis sem a efficitur auctor. Sed
+                vulputate vitae dui non fermentum. Donec non sem
+                dignissim, tincidunt arcu eget, posuere tellus. Quisque
+                consectetur diam id faucibus sagittis. Praesent placerat,
+                diam non sollicitudin suscipit, eros erat</p>
+                <a href="" class="item__link r_m2">Read more...</a>
+            </div>
+        </div>
+        <div class="clients">
+            <div class="clients-header">
+                <span class="item__line cline_3"></span>
+                <p class="item__article">CLIENTS</p>
+            </div>
+            <div class="clients-logo">
+                <img src="./img/logo-html.jpg" alt="html logo" class="clients-logo__img">
+                <img src="./img/logo-css.jpg" alt="css logo" class="clients-logo__img">
+                <img src="./img/logo-nodejs.jpg" alt="nodejs logo" class="clients-logo__img">
+                <img src="./img/logo-php.jpg" alt="php logo" class="clients-logo__img">
+                <img src="./img/logo-mysql.jpg" alt="MySQL logo" class="clients-logo__img">
+            </div>
+        </div>
     </div>
-    
     <bottom class="bottom">
         <div class="copyright-wrap">
             <a href="" class="copyright__link">Copyright © Lodoss Team 2018</a>
