--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Theme_3-Task_1</title>
 </head>
 
 <body>
     <div class="wrapper">
-        <header class="header">
+        <header class="header row justify-content-between">
             <div class="logo">
                 <span class="logo__box"></span>
                 <p class="logo__text">SUPER LOGO</p>
@@ -18,18 +21,19 @@
                 <input type="search" class="search__input"></input>
                 <input type="submit" class="search__btn" value="GO"></input>
             </form>
-            <nav class="menu-bar">
-                <ul class="menu">
-                    <li class="menu__item menu__item_active"><a href="#" class="menu__link menu__link_active">HOME</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">ABOUT US</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">SERVICE</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">PARTNERS</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">CUSTOMERS</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">PROJECT</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">CAREERS</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">CONTACT</a></li>
-                </ul>
-            </nav>
+        </header>
+        <nav class="menu-bar">
+            <ul class="menu d-flex">
+                <li class="menu__item menu__item_active flex-fill"><a href="#" class="menu__link menu__link_active">HOME</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">ABOUT US</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">SERVICE</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">PARTNERS</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">CUSTOMERS</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">PROJECT</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">CAREERS</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">CONTACT</a></li>
+            </ul>
+        </nav>
         </header> 
         <div class="header-frame">
             <div class="frame__img"></div>
@@ -44,7 +48,7 @@
                 <div class="content-item">
                     <div class="item__line"></div>
                     <p class="item__article">ABOUT SUPER LOGO</p>
-                    <img src="./img/puppy.jpg" alt="puppy" class="item__img">
+                    <img src="img/puppy.jpg" alt="puppy" class="item__img">
                     <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Sed quam massa, dignissim at nisi nec, iaculis molestie
                     leo. Aenean hendrerit pretium enim quis rutrum.
@@ -53,12 +57,12 @@
                     dignissim, tincidunt arcu eget, posuere tellus. Quisque
                     consectetur diam id faucibus sagittis. Praesent placerat,
                     diam non sollicitudin suscipit, eros erat</p>
-                    <a href="" class="item__link">Read more...</a>
+                    <a href="#" class="item__link">Read more...</a>
                 </div>
                 <div class="content-item second-item">
                     <span class="item__line line-2"></span>
                     <p class="item__article">SOME WORDS OUR CEO</p>
-                    <img src="./img/jobs.jpg" alt="Jobs" class="item__img">
+                    <img src="img/jobs.jpg" alt="Jobs" class="item__img">
                     <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
                     Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
                     fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
@@ -70,7 +74,7 @@
                 <div class="content-item">
                     <span class="item__line line-2"></span>
                     <p class="item__article">ABOUT SUPER LOGO</p>
-                    <img src="./img/loopoglaz.jpg" alt="loopoglaz" class="item__img">
+                    <img src="img/loopoglaz.jpg" alt="loopoglaz" class="item__img">
                     <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
                     Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
                     fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
@@ -80,7 +84,7 @@
                 <div class="content-item second-item">
                     <span class="item__line"></span>
                     <p class="item__article">SOME WORDS OUR CEO</p>
-                    <img src="./img/blue-hair.jpg" alt="girl" class="item__img">
+                    <img src="img/blue-hair.jpg" alt="girl" class="item__img">
                     <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
                     Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
                     fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
@@ -108,17 +112,17 @@
                 <p class="item__article">RESENT POSTS</p>
                 <div class="wraper-article">
                     <div class="little-item">
-                        <img src="./img/car.jpg" alt="car" class="little_photo">
+                        <img src="img/car.jpg" alt="car" class="little_photo">
                         <h4 class="lorem">LOREM IPSUM</h2>
                         <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                     </div>
                     <div class="little-item">
-                        <img src="./img/phone.jpg" alt="phone" class="little_photo">
+                        <img src="img/phone.jpg" alt="phone" class="little_photo">
                         <h4 class="lorem">LOREM IPSUM</h2>
                         <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                     </div>
                     <div class="little-item">
-                        <img src="./img/BBC.jpg" alt="BBC-logo" class="little_photo">
+                        <img src="img/BBC.jpg" alt="BBC-logo" class="little_photo">
                         <h4 class="lorem">LOREM IPSUM</h2>
                         <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                     </div>
@@ -144,19 +148,21 @@
                 <p class="item__article">CLIENTS</p>
             </div>
             <div class="clients-logo">
-                <img src="./img/logo-html.jpg" alt="html logo" class="clients-logo__img">
-                <img src="./img/logo-css.jpg" alt="css logo" class="clients-logo__img">
-                <img src="./img/logo-nodejs.jpg" alt="nodejs logo" class="clients-logo__img">
-                <img src="./img/logo-php.jpg" alt="php logo" class="clients-logo__img">
-                <img src="./img/logo-mysql.jpg" alt="MySQL logo" class="clients-logo__img">
+                <img src="img/logo-html.jpg" alt="html logo" class="clients-logo__img">
+                <img src="img/logo-css.jpg" alt="css logo" class="clients-logo__img">
+                <img src="img/logo-nodejs.jpg" alt="nodejs logo" class="clients-logo__img">
+                <img src="img/logo-php.jpg" alt="php logo" class="clients-logo__img">
+                <img src="img/logo-mysql.jpg" alt="MySQL logo" class="clients-logo__img">
             </div>
         </div>
     </div>
-    <bottom class="bottom">
+    <footer class="bottom">
         <div class="copyright-wrap">
-            <a href="" class="copyright__link">Copyright © Lodoss Team 2018</a>
+            <a href="#" class="copyright__link">Copyright © Lodoss Team 2018</a>
         </div>
-    </bottom>
+    </footer>
+
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
