--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
             <li class="frame__btn"><a href="#" class="frame__btn-link">READ MORE</a></li>
         </div>
         <div class="main-content">
-            <div class="content">
+            <div class="content row justify-content-around">
                 <div class="content-item">
                     <div class="item__line"></div>
                     <p class="item__article">ABOUT SUPER LOGO</p>
@@ -70,7 +70,7 @@
                     <a href="#" class="item__link">Steve Jobs, CEO</a>
                 </div>
             </div>       
-            <div class="content">
+            <div class="content row justify-content-around">
                 <div class="content-item">
                     <span class="item__line line-2"></span>
                     <p class="item__article">ABOUT SUPER LOGO</p>
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <div class="content-2">
+        <div class="content-2 row justify-content-center">
             <div class="content-item content-item-2">
                 <span class="item__line cline_2"></span>
                 <p class="item__article">ABOUT SUPER LOGO</p>
@@ -143,11 +143,9 @@
             </div>
         </div>
         <div class="clients">
-            <div class="clients-header">
-                <span class="item__line cline_3"></span>
-                <p class="item__article">CLIENTS</p>
-            </div>
-            <div class="clients-logo">
+            <span class="item__line cline_3"></span>
+            <p class="item__article">CLIENTS</p>
+            <div class="clients-logo row wrap justify-content-center">
                 <img src="img/logo-html.jpg" alt="html logo" class="clients-logo__img">
                 <img src="img/logo-css.jpg" alt="css logo" class="clients-logo__img">
                 <img src="img/logo-nodejs.jpg" alt="nodejs logo" class="clients-logo__img">
