--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,6 @@
         </nav>
         </header> 
         <div class="header-frame">
-            <div class="frame__img"></div>
             <h1 class="frame__article">Aliquam pharetra vulputate</h1>
             <p class="frame__paragraf">Vivamus est mauris, sollicitudin ut ipsum pharetra, porta rutrum turpis. Suspendisse sollicitudin quam eget condimentum
             posuere. In auctor vel mi porta commodo. Vestibulum mattis fringilla tempus. Etiam eu consectetur nisi. Aenean blandit
@@ -111,20 +110,20 @@
                 <span class="item__line cline_2"></span>
                 <p class="item__article">RESENT POSTS</p>
                 <div class="wraper-article">
-                    <div class="little-item">
-                        <img src="img/car.jpg" alt="car" class="little_photo">
-                        <h4 class="lorem">LOREM IPSUM</h2>
-                        <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
+                    <div class="mini-item">
+                        <img src="img/car.jpg" alt="car" class="mini-item__photo">
+                        <h4 class="mini-item__article">LOREM IPSUM</h2>
+                        <p class="item__text mini-item__text">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                     </div>
-                    <div class="little-item">
-                        <img src="img/phone.jpg" alt="phone" class="little_photo">
-                        <h4 class="lorem">LOREM IPSUM</h2>
-                        <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
+                    <div class="mini-item">
+                        <img src="img/phone.jpg" alt="phone" class="mini-item__photo">
+                        <h4 class="mini-item__article">LOREM IPSUM</h2>
+                        <p class="item__text mini-item__text">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                     </div>
-                    <div class="little-item">
-                        <img src="img/BBC.jpg" alt="BBC-logo" class="little_photo">
-                        <h4 class="lorem">LOREM IPSUM</h2>
-                        <p class="item__text item-text-3">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
+                    <div class="mini-item">
+                        <img src="img/BBC.jpg" alt="BBC-logo" class="mini-item__photo">
+                        <h4 class="mini-item__article">LOREM IPSUM</h2>
+                        <p class="item__text mini-item__text">Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor.</p>
                     </div>
                 </div>
             </div>
@@ -154,7 +153,7 @@
             </div>
         </div>
     </div>
-    <footer class="bottom">
+    <footer class="bottom d-flex">
         <div class="copyright-wrap">
             <a href="#" class="copyright__link">Copyright © Lodoss Team 2018</a>
         </div>
