1st step almost done

--- a/Index.html
+++ b/Index.html
@@ -35,20 +35,93 @@
             </ul>
         </nav>
         </header> 
-        <div class="header-frame">
+        <div class="header-frame d-flex flex-column">
             <h1 class="frame__article">Aliquam pharetra vulputate</h1>
             <p class="frame__paragraf">Vivamus est mauris, sollicitudin ut ipsum pharetra, porta rutrum turpis. Suspendisse sollicitudin quam eget condimentum
             posuere. In auctor vel mi porta commodo. Vestibulum mattis fringilla tempus. Etiam eu consectetur nisi. Aenean blandit
             sodales euismod. In hac habitasse platea dictumst.</p>
-            <li class="frame__btn"><a href="#" class="frame__btn-link">READ MORE</a></li>
+            <li class="frame__btn d-flex justify-content-center" onClick="location.href='#'"><p class="frame__btn-link">READ MORE</p></li>
         </div>
         <div class="main-content">
             <div class="content row justify-content-around">
-                <div class="content-item">
-                    <div class="item__line"></div>
+                <div class="content-item d-flex">
+                    <div class="header-item flex-column">
+                        <span class="item__line"></span>
+                        <p class="item__article">ABOUT SUPER LOGO</p>
+                    </div>
+                    <div class="item-block d-flex">
+                        <img src="img/puppy.jpg" alt="puppy" class="item__img">
+                        <div class="item-block-text">
+                            <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Sed quam massa, dignissim at nisi nec, iaculis molestie
+                            leo. Aenean hendrerit pretium enim quis rutrum.
+                            Pellentesque mattis sem a efficitur auctor. Sed
+                            vulputate vitae dui non fermentum. Donec non sem
+                            dignissim, tincidunt arcu eget, posuere tellus. Quisque
+                            consectetur diam id faucibus sagittis. Praesent placerat,
+                            diam non sollicitudin suscipit, eros erat</p>
+                            <a href="#" class="item__link">Read more...</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item second-item d-flex">
+                    <div class="header-item">
+                        <span class="item__line line-2"></span>
+                        <p class="item__article">SOME WORDS OUR CEO</p>
+                    </div>
+                    <div class="item-block">
+                        <img src="img/jobs.jpg" alt="Jobs" class="item__img">
+                        <div class="item-block-text">
+                            <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
+                            Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
+                            fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
+                            Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
+                            <a href="#" class="item__link">Steve Jobs, CEO</a>
+                        </div>
+                    </div>
+                </div>
+            </div>       
+            <div class="content row justify-content-around">
+                <div class="content-item d-flex">
+                    <div class="header-item">
+                        <span class="item__line line-2"></span>
+                        <p class="item__article">ABOUT SUPER LOGO</p>
+                    </div>
+                    <div class="item-block">
+                        <img src="img/loopoglaz.jpg" alt="loopoglaz" class="item__img">
+                        <div class="item-block-text">
+                            <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
+                            Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
+                            fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
+                            Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
+                            <a href="#" class="item__link">Read more...</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-item second-item d-flex">
+                    <div class="header-item">
+                        <span class="item__line"></span>
+                        <p class="item__article">SOME WORDS OUR CEO</p>
+                    </div>
+                    <div class="item-block">
+                        <img src="img/blue-hair.jpg" alt="girl" class="item__img">
+                        <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
+                        Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
+                        fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
+                        Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
+                        <a href="#" class="item__link">Steve Jobs, CEO</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="content-2 row justify-content-center">
+            <div class="content-item content-item-2">
+                <div class="header-item">
+                    <span class="item__line cline_2"></span>
                     <p class="item__article">ABOUT SUPER LOGO</p>
-                    <img src="img/puppy.jpg" alt="puppy" class="item__img">
-                    <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </div>
+                <div class="item-block">
+                    <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Sed quam massa, dignissim at nisi nec, iaculis molestie
                     leo. Aenean hendrerit pretium enim quis rutrum.
                     Pellentesque mattis sem a efficitur auctor. Sed
@@ -56,59 +129,14 @@
                     dignissim, tincidunt arcu eget, posuere tellus. Quisque
                     consectetur diam id faucibus sagittis. Praesent placerat,
                     diam non sollicitudin suscipit, eros erat</p>
-                    <a href="#" class="item__link">Read more...</a>
-                </div>
-                <div class="content-item second-item">
-                    <span class="item__line line-2"></span>
-                    <p class="item__article">SOME WORDS OUR CEO</p>
-                    <img src="img/jobs.jpg" alt="Jobs" class="item__img">
-                    <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
-                    Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
-                    fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
-                    Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
-                    <a href="#" class="item__link">Steve Jobs, CEO</a>
-                </div>
-            </div>       
-            <div class="content row justify-content-around">
-                <div class="content-item">
-                    <span class="item__line line-2"></span>
-                    <p class="item__article">ABOUT SUPER LOGO</p>
-                    <img src="img/loopoglaz.jpg" alt="loopoglaz" class="item__img">
-                    <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
-                    Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
-                    fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
-                    Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
-                    <a href="#" class="item__link">Read more...</a>
-                </div>
-                <div class="content-item second-item">
-                    <span class="item__line"></span>
-                    <p class="item__article">SOME WORDS OUR CEO</p>
-                    <img src="img/blue-hair.jpg" alt="girl" class="item__img">
-                    <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
-                    Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
-                    fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
-                    Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
-                    <a href="#" class="item__link">Steve Jobs, CEO</a>
+                    <a href="" class="item__link r_m2">Read more...</a>
                 </div>
             </div>
-        </div>
-        <div class="content-2 row justify-content-center">
             <div class="content-item content-item-2">
-                <span class="item__line cline_2"></span>
-                <p class="item__article">ABOUT SUPER LOGO</p>
-                <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Sed quam massa, dignissim at nisi nec, iaculis molestie
-                leo. Aenean hendrerit pretium enim quis rutrum.
-                Pellentesque mattis sem a efficitur auctor. Sed
-                vulputate vitae dui non fermentum. Donec non sem
-                dignissim, tincidunt arcu eget, posuere tellus. Quisque
-                consectetur diam id faucibus sagittis. Praesent placerat,
-                diam non sollicitudin suscipit, eros erat</p>
-                <a href="" class="item__link r_m2">Read more...</a>
-            </div>
-            <div class="content-item content-item-2">
-                <span class="item__line cline_2"></span>
-                <p class="item__article">RESENT POSTS</p>
+                <div class="header-item">
+                    <span class="item__line cline_2"></span>
+                    <p class="item__article">RESENT POSTS</p>
+                </div>
                 <div class="wraper-article">
                     <div class="mini-item">
                         <img src="img/car.jpg" alt="car" class="mini-item__photo">
@@ -128,22 +156,28 @@
                 </div>
             </div>
             <div class="content-item content-item-2">
-                <span class="item__line cline_2"></span>
-                <p class="item__article">ABOUT SUPER LOGO</p>
-                <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Sed quam massa, dignissim at nisi nec, iaculis molestie
-                leo. Aenean hendrerit pretium enim quis rutrum.
-                Pellentesque mattis sem a efficitur auctor. Sed
-                vulputate vitae dui non fermentum. Donec non sem
-                dignissim, tincidunt arcu eget, posuere tellus. Quisque
-                consectetur diam id faucibus sagittis. Praesent placerat,
-                diam non sollicitudin suscipit, eros erat</p>
-                <a href="" class="item__link r_m2">Read more...</a>
+                <div class="header-item">
+                    <span class="item__line cline_2"></span>
+                    <p class="item__article">ABOUT SUPER LOGO</p>
+                </div>
+                <div class="item-block">
+                    <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Sed quam massa, dignissim at nisi nec, iaculis molestie
+                    leo. Aenean hendrerit pretium enim quis rutrum.
+                    Pellentesque mattis sem a efficitur auctor. Sed
+                    vulputate vitae dui non fermentum. Donec non sem
+                    dignissim, tincidunt arcu eget, posuere tellus. Quisque
+                    consectetur diam id faucibus sagittis. Praesent placerat,
+                    diam non sollicitudin suscipit, eros erat</p>
+                    <a href="" class="item__link r_m2">Read more...</a>
+                </div>
             </div>
         </div>
-        <div class="clients">
-            <span class="item__line cline_3"></span>
-            <p class="item__article">CLIENTS</p>
+        <div class="clients d-flex flex-column">
+            <div class="header-item">
+                <span class="item__line cline_3"  style="margin-bottom: 12px"></span>
+                <p class="item__article">CLIENTS</p>
+            </div>
             <div class="clients-logo row wrap justify-content-center">
                 <img src="img/logo-html.jpg" alt="html logo" class="clients-logo__img">
                 <img src="img/logo-css.jpg" alt="css logo" class="clients-logo__img">
