--- a/Index.html
+++ b/Index.html
@@ -42,14 +42,14 @@
             sodales euismod. In hac habitasse platea dictumst.</p>
             <li class="frame__btn d-flex justify-content-center" onClick="location.href='#'"><p class="frame__btn-link">READ MORE</p></li>
         </div>
-        <div class="main-content">
+        <div class="main-content d-flex flex-column">
             <div class="content row justify-content-around">
                 <div class="content-item d-flex">
-                    <div class="header-item flex-column">
+                    <div class="header-item">
                         <span class="item__line"></span>
                         <p class="item__article">ABOUT SUPER LOGO</p>
                     </div>
-                    <div class="item-block d-flex">
+                    <div class="item-block">
                         <img src="img/puppy.jpg" alt="puppy" class="item__img">
                         <div class="item-block-text">
                             <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -105,11 +105,13 @@
                     </div>
                     <div class="item-block">
                         <img src="img/blue-hair.jpg" alt="girl" class="item__img">
-                        <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
-                        Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
-                        fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
-                        Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
-                        <a href="#" class="item__link">Steve Jobs, CEO</a>
+                        <div class="item-block-text">
+                            <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam massa, dignissim at nisi nec, iaculis molestie leo.
+                            Aenean hendrerit pretium enim quis rutrum. Pellentesque mattis sem a efficitur auctor. Sed vulputate vitae dui non
+                            fermentum. Donec non sem dignissim, tincidunt arcu eget, posuere tellus. Quisque consectetur diam id faucibus sagittis.
+                            Praesent placerat, diam non sollicitudin suscipit, eros erat</p>
+                            <a href="#" class="item__link">Steve Jobs, CEO</a>
+                        </div>
                     </div>
                 </div>
             </div>
